Adding Taskfile to replacing pre-commit.sh script.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,11 @@ jobs:
       with:
         go-version-file: ./go.mod
 
+    - name: Install task
+      run: (command -v task) || go install github.com/go-task/task/v3/cmd/task@latest
+
     - name: Run task
-      run: |
-        (command -v task) || go install github.com/go-task/task/v3/cmd/task@latest
-        task action
+      run: task action
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.5.0
