--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles("**/.sum") }}
+        key: ${{ runner.os }}-go-${{ hashFiles('**/*.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
 
