--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -18,14 +17,20 @@ jobs:
       with:
         go-version-file: ./go.mod
 
-    - name: Install task
-      run: (command -v task) || go install github.com/go-task/task/v3/cmd/task@latest
+    - name: Setup cache
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: Run task
-      run: task action
+      run: go run github.com/go-task/task/v3/cmd/task@v3.38.0
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.5.0
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-      
